DuPont DevSB/src/objects/Catalog_Item_Subscription__c.object
<CustomObject>
    <description>Allow Contacts to a subscribe to news letters, product updates, etc..</description>
    <fields>
        <fullName>ApprovalStage__c</fullName>
        <description>Read-only Approval Stage</description>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Not Needed</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>Current status of approval process</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovedQuantity__c</fullName>
        <description>The latest Approved Quantity</description>
        <label>Approved Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CatalogItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item that you are subscribing to.</description>
        <label>Catalog Item</label>
        <referenceTo>Catalog_Item__c</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Lookup to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Subscription_ID__c</fullName>
        <label>Legacy Subscription ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Method__c</fullName>
        <description>The method the item is delivered to subscriber.   (A list of possible subscription delivery methods are defined on the catalog item, and a trigger validates this picklist value is among the supported methods for the item selected)</description>
        <label>Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postal Service</fullName>
                    <default>true</default>
                    <label>Postal Service</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fCatalogItemName__c</fullName>
        <description>formula field to show the catalog name of the related catalog item.</description>
        <formula>CatalogItem__r.Catalog_Item_Name__c</formula>
        <label>Catalog Item Name</label>
        <type>Text</type>
    </fields>
    <label>Catalog Item Subscriptions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUBSC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Item Subscriptions</pluralLabel>
    <recordTypes>
        <fullName>Postal_Service</fullName>
        <active>false</active>
        <description>Postal Service Subscription</description>
        <label>Postal Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>